Fixed spacing for vector divider images.

--- a/_includes/theme/styles/_impact-reports.scss
+++ b/_includes/theme/styles/_impact-reports.scss
@@ -819,7 +819,7 @@ $c-report-header: #006680;
 
     .section-divider {
       text-align: center;
-      margin-top: units(6);
+      margin-bottom: units(10);
     }
 
     .blue-hilighted-insights {
